# poc-data-ai-ecosystem

./: .gitignore  README.md  docker-compose.yml
analysis/: .env.example  Dockerfile  jupyter_config.py  pyproject.toml
analysis/notebooks/: 01_getting_started.ipynb  02_table_extraction.ipynb  03_metadata_curation.ipynb
analysis/src/analysis_helpers/: __init__.py  display.py  explorer.py  loaders.py  sql.py
analysis/src/metadata_assistant/: __init__.py  assistant.py  catalog.py  models.py  prompts.py  relationships.py  suggestions.py  validation.py
analysis/tests/: __init__.py  test_assistant.py  test_explorer.py
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/: __init__.py  main.py
backend/src/api/: deps.py
backend/src/models/: census.py  domain.py  schemas.py
backend/src/services/: answer_metrics.py  census.py  congress.py  database.py  embeddings.py  graph_builder.py  neo4j_client.py  reranker.py  storage.py  weaviate_client.py  web_search.py
ingestion-processing/: .env.example  pyproject.toml
ingestion-processing/manifests/agencies/: agencies.yaml
ingestion-processing/manifests/assets/: federal-register-documents.yaml  ohss-lawful-permanent-residents.yaml  ohss-yearbook-immigration-statistics.yaml  population-estimates.yaml  rpc-usrap-report-to-congress.yaml  uscis-active-daca-recipients.yaml  uscis-annual-statistical-report.yaml  uscis-backlog-frontlog.yaml  uscis-daca-performance.yaml  uscis-eb-performance-data.yaml  uscis-h1b-characteristics-fy24.yaml  uscis-h1b-petitions-fy24.yaml  uscis-h2b-characteristics-fy24.yaml  uscis-i130-awaiting-visa.yaml  uscis-i130-performance.yaml  uscis-i140-by-class-country.yaml  uscis-i140-quarterly.yaml  uscis-i360-sij-congressional.yaml  uscis-i360-vawa-performance.yaml  uscis-i526-historical.yaml  uscis-i526-quarterly.yaml  uscis-i765-employment-auth.yaml  uscis-i765-pending-c08.yaml  uscis-i821-radp.yaml  uscis-i914-tvisa-statistics.yaml  uscis-i918-uvisa-statistics.yaml  uscis-ihs-aiftdhs-report.yaml  uscis-n400-performance.yaml  uscis-premium-processing.yaml  uscis-quarterly-forms.yaml  uscis-sij-report.yaml  uscis-special-immigrant-af-iraq-fy24.yaml  uscis-tps-cy23-report.yaml  uscis-trig-report-fy23.yaml  uscis-victims-abuse-applications-fy24.yaml  uscis-waivers-report-fy23.yaml  uscis-waivers.yaml
ingestion-processing/manifests/workflows/: federal-register-pipeline.yaml  ohss-lpr-pipeline.yaml  ohss-yearbook-pipeline.yaml  population-pipeline.yaml  rpc-usrap-pipeline.yaml  uscis-annual-stats-pipeline.yaml  uscis-backlog-frontlog-pipeline.yaml  uscis-daca-performance-pipeline.yaml  uscis-daca-pipeline.yaml  uscis-eb-performance-pipeline.yaml  uscis-forms-pipeline.yaml  uscis-h1b-characteristics-fy24-pipeline.yaml  uscis-h1b-petitions-fy24-pipeline.yaml  uscis-h2b-characteristics-fy24-pipeline.yaml  uscis-i130-awaiting-visa-pipeline.yaml  uscis-i130-performance-pipeline.yaml  uscis-i140-by-class-country-pipeline.yaml  uscis-i140-quarterly-pipeline.yaml  uscis-i360-sij-congressional-pipeline.yaml  uscis-i360-vawa-performance-pipeline.yaml  uscis-i526-historical-pipeline.yaml  uscis-i526-quarterly-pipeline.yaml  uscis-i765-employment-auth-pipeline.yaml  uscis-i765-pending-c08-pipeline.yaml  uscis-i821-radp-pipeline.yaml  uscis-i914-tvisa-statistics-pipeline.yaml  uscis-i918-uvisa-statistics-pipeline.yaml  uscis-ihs-report-pipeline.yaml  uscis-n400-performance-pipeline.yaml  uscis-premium-processing-pipeline.yaml  uscis-sij-report-pipeline.yaml  uscis-special-immigrant-af-iraq-pipeline.yaml  uscis-tps-cy23-report-pipeline.yaml  uscis-trig-report-pipeline.yaml  (+3 more)
ingestion-processing/src/: cli.py  logging_manager.py
ingestion-processing/tests/: __init__.py  conftest.py
mcp-data-server/: claude_desktop_config.json  pyproject.toml
(+176 files in other folders)
