[project]
name = "gov-data-pipeline"
version = "0.1.0"
description = "Multi-step progressive pipeline for government data ingestion"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "minio>=7.2",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
    "docstrange>=1.1.8",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "truststore>=0.10.4",
    "weaviate-client>=4.20.4",
    "neo4j>=6.1.0",
    "pymupdf>=1.27.2",
]

[project.optional-dependencies]
nanonets = [
    "docstrange>=0.1",
]
enrichment = [
    "anthropic>=0.40",
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
pipeline = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli", "src/control", "src/runtime", "src/steps", "src/storage", "src/db"]

[tool.hatch.build]
sources = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
